MULTISITE-1430 make the EYP_translations feature generic

--- a/sites/all/modules/custom/multisite_drupal_toolbox/icons/index.html
+++ b/sites/all/modules/custom/multisite_drupal_toolbox/icons/index.html
@@ -88,6 +88,10 @@
 		<p>The generated SVG font can be imported back to <a href="http://icomoon.io/app">IcoMoon</a> for modification.</p>
 	</header>
 	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe000;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe000;" />
+	</div>
+	<div class="glyph">
 		<div class="fs1" aria-hidden="true" data-icon="&#xf0c9;"></div>
 		<input type="text" readonly="readonly" value="&amp;#xf0c9;" />
 	</div>
@@ -96,8 +100,8 @@
 		<input type="text" readonly="readonly" value="&amp;#xe002;" />
 	</div>
 	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe000;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe000;" />
+		<div class="fs1" aria-hidden="true" data-icon="&#xe001;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe001;" />
 	</div>
 	<div class="glyph">
 		<div class="fs1" aria-hidden="true" data-icon="&#xf0e6;"></div>
@@ -168,12 +172,12 @@
 		<input type="text" readonly="readonly" value="&amp;#xe005;" />
 	</div>
 	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe001;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe001;" />
-	</div>
-	<div class="glyph">
 		<div class="fs1" aria-hidden="true" data-icon="&#xe004;"></div>
 		<input type="text" readonly="readonly" value="&amp;#xe004;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe00d;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe00d;" />
 	</div>
 	<div class="glyph">
 		<div class="fs1" aria-hidden="true" data-icon="&#xf046;"></div>
@@ -213,6 +217,10 @@
 	<header>
 		<h1>Class Names</h1>
 	</header>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-flag"></span>
+		&nbsp;multisite-icon-flag
+	</span>
 	<span class="box1">
 		<span aria-hidden="true" class="multisite-icon-reorder"></span>
 		&nbsp;multisite-icon-reorder
