MULTISITE-1727 Add icons to feature set

--- a/sites/all/modules/custom/multisite_drupal_toolbox/icons/index.html
+++ b/sites/all/modules/custom/multisite_drupal_toolbox/icons/index.html
@@ -26,17 +26,18 @@
 		background: #eee;
 		padding: .75em;
 		margin: .75em 1.5em .75em 0;
-		width: 7em;
+		width: 7.5em;
 		border-radius: .25em;
 		box-shadow: inset 0 0 0 1px #f8f8f8, 0 0 0 1px #CCC;
 	}
 	.glyph input {
+		font-family: consolas, monospace;
+		font-size: 13px;
 		width: 100%;
 		text-align: center;
-		font-family: consolas, monospace;
-	}
-	.glyph input, .mtm {
-		margin-top: .75em;
+		border: 0;
+		box-shadow: 0 0 0 1px #ccc;
+		padding: .125em;
 	}
 	.w-main {
 		width: 80%;
@@ -211,6 +212,30 @@
 		<div class="fs1" aria-hidden="true" data-icon="&#xe003;"></div>
 		<input type="text" readonly="readonly" value="&amp;#xe003;" />
 	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe018;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe018;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe014;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe014;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe019;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe019;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe01a;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe01a;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe01b;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe01b;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe01c;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe01c;" />
+	</div>
 	</section>
 	<div class="clear"></div>
 	<section class="mtm clearfix" id="glyphs">
@@ -340,6 +365,30 @@
 	<span class="box1">
 		<span aria-hidden="true" class="multisite-icon-camera"></span>
 		&nbsp;multisite-icon-camera
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-location"></span>
+		&nbsp;multisite-icon-location
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-menu"></span>
+		&nbsp;multisite-icon-menu
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-pie"></span>
+		&nbsp;multisite-icon-pie
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-list"></span>
+		&nbsp;multisite-icon-list
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-bookmarks"></span>
+		&nbsp;multisite-icon-bookmarks
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-notification"></span>
+		&nbsp;multisite-icon-notification
 	</span>
 	</section>
 	<footer>
