--- a/sites/all/modules/features/custom/multisite_notifications/multisite_notifications_core/tests/selenium/testNotifications.html
+++ b/sites/all/modules/features/custom/multisite_notifications/multisite_notifications_core/tests/selenium/testNotifications.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel="selenium.base" href="http://fpfis-dev.net1.cec.eu.int/" />
+<link rel="selenium.base" href="http://fpfis-dev/" />
 <title>testNotifications</title>
 </head>
 <body>
@@ -11,6 +11,36 @@
 <thead>
 <tr><td rowspan="1" colspan="3">testNotifications</td></tr>
 </thead><tbody>
+<tr>
+	<td>open</td>
+	<td>/multisite/multisite_drupal_dle02/en/content/welcome-your-site</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>//a[contains(text(),'Home')]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>link=Show Subscribe</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>id=edit-updates-1</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>id=edit-comments-2</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>id=edit-submit</td>
+	<td></td>
+</tr>
 
 </tbody></table>
 </body>
