MULTISITE-1965 restore icons i deleted by error

--- a/sites/all/modules/custom/multisite_drupal_toolbox/icons/index.html
+++ b/sites/all/modules/custom/multisite_drupal_toolbox/icons/index.html
@@ -208,6 +208,38 @@
 		<div class="fs1" aria-hidden="true" data-icon="&#xe039;"></div>
 		<input type="text" readonly="readonly" value="&amp;#xe039;" />
 	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xf0c0;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xf0c0;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe003;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe003;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe018;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe018;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe014;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe014;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe019;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe019;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe01a;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe01a;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe01b;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe01b;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe01c;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe01c;" />
+	</div>
 	</section>
 	<div class="clear"></div>
 	<section class="mtm clearfix" id="glyphs">
@@ -333,6 +365,38 @@
 	<span class="box1">
 		<span aria-hidden="true" class="multisite-icon-keyboard"></span>
 		&nbsp;multisite-icon-keyboard
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-group"></span>
+		&nbsp;multisite-icon-group
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-camera"></span>
+		&nbsp;multisite-icon-camera
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-location"></span>
+		&nbsp;multisite-icon-location
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-menu"></span>
+		&nbsp;multisite-icon-menu
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-pie"></span>
+		&nbsp;multisite-icon-pie
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-list"></span>
+		&nbsp;multisite-icon-list
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-bookmarks"></span>
+		&nbsp;multisite-icon-bookmarks
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-notification"></span>
+		&nbsp;multisite-icon-notification
 	</span>
 	</section>
 	<footer>
