MULTISITE-2122 Add the new feature to the stack

--- a/sites/all/modules/custom/multisite_drupal_toolbox/icons/index.html
+++ b/sites/all/modules/custom/multisite_drupal_toolbox/icons/index.html
@@ -240,6 +240,10 @@
 		<div class="fs1" aria-hidden="true" data-icon="&#xe01c;"></div>
 		<input type="text" readonly="readonly" value="&amp;#xe01c;" />
 	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe01e;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe01e;" />
+	</div>
 	</section>
 	<div class="clear"></div>
 	<section class="mtm clearfix" id="glyphs">
@@ -397,6 +401,10 @@
 	<span class="box1">
 		<span aria-hidden="true" class="multisite-icon-notification"></span>
 		&nbsp;multisite-icon-notification
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-bubbles"></span>
+		&nbsp;multisite-icon-bubbles
 	</span>
 	</section>
 	<footer>
