MULTISITE-2135 Add feature business indicators to feature set

--- a/sites/all/modules/custom/multisite_drupal_toolbox/icons/index.html
+++ b/sites/all/modules/custom/multisite_drupal_toolbox/icons/index.html
@@ -244,6 +244,10 @@
 		<div class="fs1" aria-hidden="true" data-icon="&#xe01e;"></div>
 		<input type="text" readonly="readonly" value="&amp;#xe01e;" />
 	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe01d;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe01d;" />
+	</div>
 	</section>
 	<div class="clear"></div>
 	<section class="mtm clearfix" id="glyphs">
@@ -405,6 +409,10 @@
 	<span class="box1">
 		<span aria-hidden="true" class="multisite-icon-bubbles"></span>
 		&nbsp;multisite-icon-bubbles
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-stats"></span>
+		&nbsp;multisite-icon-stats
 	</span>
 	</section>
 	<footer>
