--- a/sites/all/modules/custom/multisite_drupal_toolbox/icons/demo.html
+++ b/sites/all/modules/custom/multisite_drupal_toolbox/icons/demo.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="style.css"></head>
 <body>
 	<div class="bgc1 clearfix">
-		<h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> multisite-icons <small class="fgc1">(Glyphs:&nbsp;42)</small></h1>
+		<h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> multisite-icons <small class="fgc1">(Glyphs:&nbsp;43)</small></h1>
 	</div>
 	<div class="clearfix mhl ptl">
 		<h1 class="mvm mtn bshadow fgc1">Grid Size: 16</h1>
@@ -20,6 +20,19 @@
 			<fieldset class="fs0 size1of1 clearfix">
 				<input type="text" readonly value="e600" class="unit size1of2" />
 				<input type="text" maxlength="1" readonly value="&#xe600;" class="unitRight size1of2 talign-right" />
+			</fieldset>
+			<div class="fs0 bshadow0 clearfix noLiga-true">
+				<span class="unit pvs fgc1">liga: </span>
+				<input type="text" readonly value="" class="liga unitRight" />
+			</div>
+		</div>
+		<div class="glyph fs1">
+			<div class="clearfix bshadow0 pbs">
+				<span class="multisite-icon-new-tab"></span><span class="mls"> multisite-icon-new-tab</span>
+			</div>
+			<fieldset class="fs0 size1of1 clearfix">
+				<input type="text" readonly value="e601" class="unit size1of2" />
+				<input type="text" maxlength="1" readonly value="&#xe601;" class="unitRight size1of2 talign-right" />
 			</fieldset>
 			<div class="fs0 bshadow0 clearfix noLiga-true">
 				<span class="unit pvs fgc1">liga: </span>
