MULTISITE-1854 multisite_crop_and_resize version 7.x-1.2

--- a/sites/all/modules/features/custom/multisite_crop_and_resize/tests/selenium/1_login.html
+++ b/sites/all/modules/features/custom/multisite_crop_and_resize/tests/selenium/1_login.html
@@ -13,12 +13,12 @@
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/141stan_1854_3/en</td>
+	<td>en</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=login</td>
+	<td>link=Login</td>
 	<td></td>
 </tr>
 <tr>
