--- a/sites/all/modules/features/custom/multisite_crop_and_resize/tests/selenium/2_create-node.html
+++ b/sites/all/modules/features/custom/multisite_crop_and_resize/tests/selenium/2_create-node.html
@@ -13,7 +13,7 @@
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/141stan_1854_3/</td>
+	<td>en</td>
 	<td></td>
 </tr>
 <tr>
@@ -58,12 +58,12 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>//div[@id='media-browser-tabset']/div/ul/li[2]/a/span</td>
+	<td>//*[@id='media-tabs-wrapper']/ul/li[2]/a</td>
 	<td></td>
 </tr>
 <tr>
 	<td>click</td>
-	<td>css=#media-item-1 &gt; a.active &gt; div.media-item &gt; div.media-thumbnail &gt; img</td>
+	<td>//*[@id='media-item-2']/div/div/img</td>
 	<td></td>
 </tr>
 <tr>
@@ -123,7 +123,7 @@
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
-	<td>css=.media-image</td>
+	<td>css=.field-item.even&gt;p&gt;img</td>
 	<td></td>
 </tr>
 </tbody></table>
