--- a/sites/all/modules/custom/multisite_drupal_toolbox/icons/demo.html
+++ b/sites/all/modules/custom/multisite_drupal_toolbox/icons/demo.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="style.css"></head>
 <body>
 	<div class="bgc1 clearfix">
-		<h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> multisite-icons <small class="fgc1">(Glyphs:&nbsp;49)</small></h1>
+		<h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> multisite-icons <small class="fgc1">(Glyphs:&nbsp;50)</small></h1>
 	</div>
 	<div class="clearfix mhl ptl">
 		<h1 class="mvm mtn bshadow fgc1">Grid Size: 22</h1>
@@ -650,6 +650,22 @@
 			<fieldset class="fs0 size1of1 clearfix hidden-false">
 				<input type="text" readonly value="e000" class="unit size1of2" />
 				<input type="text" maxlength="1" readonly value="&#xe000;" class="unitRight size1of2 talign-right" />
+			</fieldset>
+			<div class="fs0 bshadow0 clearfix hidden-true">
+				<span class="unit pvs fgc1">liga: </span>
+				<input type="text" readonly value="" class="liga unitRight" />
+			</div>
+		</div>
+	</div>
+	<div class="clearfix mhl ptl">
+		<h1 class="mvm mtn bshadow fgc1">Grid Size: 14</h1>
+		<div class="glyph fs4">
+			<div class="clearfix bshadow0 pbs">
+				<span class="multisite-icon-plus-square-o"></span><span class="mls"> multisite-icon-plus-square-o</span>
+			</div>
+			<fieldset class="fs0 size1of1 clearfix hidden-false">
+				<input type="text" readonly value="f196" class="unit size1of2" />
+				<input type="text" maxlength="1" readonly value="&#xf196;" class="unitRight size1of2 talign-right" />
 			</fieldset>
 			<div class="fs0 bshadow0 clearfix hidden-true">
 				<span class="unit pvs fgc1">liga: </span>
