MULTISITE-4094 Add icon

--- a/sites/all/modules/custom/multisite_drupal_toolbox/icons/demo.html
+++ b/sites/all/modules/custom/multisite_drupal_toolbox/icons/demo.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="style.css"></head>
 <body>
 	<div class="bgc1 clearfix">
-		<h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> multisite-icons <small class="fgc1">(Glyphs:&nbsp;50)</small></h1>
+		<h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> multisite-icons <small class="fgc1">(Glyphs:&nbsp;51)</small></h1>
 	</div>
 	<div class="clearfix mhl ptl">
 		<h1 class="mvm mtn bshadow fgc1">Grid Size: 22</h1>
@@ -88,6 +88,19 @@
 			<fieldset class="fs0 size1of1 clearfix hidden-false">
 				<input type="text" readonly value="e607" class="unit size1of2" />
 				<input type="text" maxlength="1" readonly value="&#xe607;" class="unitRight size1of2 talign-right" />
+			</fieldset>
+			<div class="fs0 bshadow0 clearfix hidden-true">
+				<span class="unit pvs fgc1">liga: </span>
+				<input type="text" readonly value="" class="liga unitRight" />
+			</div>
+		</div>
+		<div class="glyph fs2">
+			<div class="clearfix bshadow0 pbs">
+				<span class="multisite-icon-steam"></span><span class="mls"> multisite-icon-steam</span>
+			</div>
+			<fieldset class="fs0 size1of1 clearfix hidden-false">
+				<input type="text" readonly value="e608" class="unit size1of2" />
+				<input type="text" maxlength="1" readonly value="&#xe608;" class="unitRight size1of2 talign-right" />
 			</fieldset>
 			<div class="fs0 bshadow0 clearfix hidden-true">
 				<span class="unit pvs fgc1">liga: </span>
